work on first section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
               <button class="button__login">Login</button>
               <button class="button__register">Register</button>
             </div>
+            <div class="burger_menu">
+              <svg width="40" height="30">
+                <use href="./images/icon.svg#burger-menu"></use>
+              </svg>
+            </div>
           </div>
         </div>
       </div>
@@ -57,7 +62,7 @@
               <button class="pro__btn">Go pro</button>
             </div>
             <div class="rating__content">
-              <svg width="123" height="30">
+              <svg class="trustpilot-svg" width="123" height="30">
                 <use href="./images/icon.svg#icon-trustpilot"></use>
               </svg>
               <div class="rating__stars">
@@ -83,6 +88,23 @@
           <div class="hero__image">
             <div class="hero_image_before">
               <img src="./images/food.png" alt="food" />
+            </div>
+            <div class="meal-modal">
+              <img
+                class="food_image"
+                width="57"
+                height="57"
+                src="./images/food-modal.png"
+                alt="food"
+              />
+              <div class="modal-text">
+                <h3 class="hero-h-meal">Chicken Hell</h3>
+                <p class="hero-p-meal">On The Way</p>
+              </div>
+              <p class="hero-meal-time">3:09 PM</p>
+            </div>
+            <div class="graph-modal">
+              <img src="./images/graph.png" alt="graphic" />
             </div>
           </div>
         </div>
