change graphic image

--- a/index.html
+++ b/index.html
@@ -112,7 +112,12 @@
               <p class="hero-meal-time">3:09 PM</p>
             </div>
             <div class="graph-modal">
-              <img src="./images/graph.png" alt="graphic" />
+              <img
+                src="./images/Graph.svg"
+                alt="graphic"
+                width="98"
+                height="86"
+              />
             </div>
           </div>
         </div>
