--- a/index.html
+++ b/index.html
@@ -88,11 +88,7 @@
           <div class="hero__image">
             <div class="hero_image_before">
               <img
-                srcset="
-                  ./images/food.png    1x,
-                  ./images/food@2x.png 2x,
-                  ./images/food@3x.png 3x
-                "
+                srcset="./images/food.png 1x, ./images/food@2x.png 2x"
                 src="./images/food.png"
                 alt="food"
               />
