add second section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,32 @@
           </div>
         </div>
       </section>
+      <section class="features">
+        <div class="container features_container">
+          <div class="features-list">
+            <ul class="features-ul">
+              <li>
+                <h2 class="features-h">10K+</h2>
+                <p class="features-p">
+                  Satisfied Costumers All Great Over The World
+                </p>
+              </li>
+              <li>
+                <h2 class="features-h">4M</h2>
+                <p class="features-p">
+                  Healthy Dishes Sold Including Milk Shakes Smooth
+                </p>
+              </li>
+              <li>
+                <h2 class="features-h">99.99%</h2>
+                <p class="features-p">
+                  Reliable Customer Support We Provide Great Experiences
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
