--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
               src="./images/mobile-screen.jpg"
               alt="app"
             />
+            <img
+              class="mobile-decor"
+              src="./images/mobile-screen-after.svg"
+              alt=""
+            />
           </div>
           <div class="third-text">
             <h2 class="third-h">
@@ -177,17 +182,12 @@
                   <use href="./images/icon.svg#arrow-right"></use>
                 </svg>
               </button>
+              <img
+                class="mobile-decor-second"
+                src="./images/mobile-svg-after.svg"
+                alt=""
+              />
             </div>
-          </div>
-          <div class="tablet-app-mobile">
-            <img
-              srcset="
-                ./images/mobile-screen.jpg    1x,
-                ./images/mobile-screen@2x.jpg 2x
-              "
-              src="./images/mobile-screen.jpg"
-              alt="app"
-            />
           </div>
         </div>
       </section>
