--- a/index.html
+++ b/index.html
@@ -155,11 +155,6 @@
               src="./images/mobile-screen.jpg"
               alt="app"
             />
-            <img
-              class="mobile-decor"
-              src="./images/mobile-screen-after.svg"
-              alt=""
-            />
           </div>
           <div class="third-text">
             <h2 class="third-h">
@@ -182,13 +177,15 @@
                   <use href="./images/icon.svg#arrow-right"></use>
                 </svg>
               </button>
-              <img
-                class="mobile-decor-second"
-                src="./images/mobile-svg-after.svg"
-                alt=""
-              />
             </div>
           </div>
+        </div>
+      </section>
+      <section>
+        <div class="container restoraunts__container">
+          <h2 class="restoraunts-h">
+            Our Top <span class="content__span">Restoraunts</span>
+          </h2>
         </div>
       </section>
     </main>
