--- a/index.html
+++ b/index.html
@@ -146,37 +146,40 @@
       </section>
       <section>
         <div class="container third__container">
-          <div class="third-main-img">
-            <img
-              srcset="
-                ./images/mobile-screen.jpg    1x,
-                ./images/mobile-screen@2x.jpg 2x
-              "
-              src="./images/mobile-screen.jpg"
-              alt="app"
-            />
-          </div>
-          <div class="third-text">
-            <h2 class="third-h">
-              Premium <span class="content__span">Quality </span>For Your Health
-            </h2>
-            <ul class="third-ul">
-              <li>
-                Premium quality food is made with ingredients that are packed
-                with essential vitamins, minerals.
-              </li>
-              <li>
-                These foods promote overall wellness by support healthy
-                digestion and boosting immunity
-              </li>
-            </ul>
-            <div class="third-btn">
-              <button class="third-button">
-                Download
-                <svg width="20" height="20">
-                  <use href="./images/icon.svg#arrow-right"></use>
-                </svg>
-              </button>
+          <div class="border-third">
+            <div class="third-main-img">
+              <img
+                srcset="
+                  ./images/mobile-screen.jpg    1x,
+                  ./images/mobile-screen@2x.jpg 2x
+                "
+                src="./images/mobile-screen.jpg"
+                alt="app"
+              />
+            </div>
+            <div class="third-text">
+              <h2 class="third-h">
+                Premium <span class="content__span">Quality </span>For Your
+                Health
+              </h2>
+              <ul class="third-ul">
+                <li>
+                  Premium quality food is made with ingredients that are packed
+                  with essential vitamins, minerals.
+                </li>
+                <li>
+                  These foods promote overall wellness by support healthy
+                  digestion and boosting immunity
+                </li>
+              </ul>
+              <div class="third-btn">
+                <button class="third-button">
+                  Download
+                  <svg width="20" height="20">
+                    <use href="./images/icon.svg#arrow-right"></use>
+                  </svg>
+                </button>
+              </div>
             </div>
           </div>
         </div>
