--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
       <div class="container header__container">
         <div class="border">
           <div class="logotype">
-            <svg width="111" height="42">
-              <use href="./images/icon.svg#Logo"></use>
-            </svg>
+            <a href="index.html">
+              <svg width="111" height="42">
+                <use href="./images/icon.svg#Logo"></use>
+              </svg>
+            </a>
           </div>
           <div class="elements">
             <nav class="navbar">
               <ul>
-                <li>Menu</li>
-                <li>Blog</li>
-                <li>Pricing</li>
-                <li>Contact</li>
+                <li><a class="nav-li current" href="index.html">Home</a></li>
+                <li><a class="nav-li" href="">Menu</a></li>
+                <li><a class="nav-li" href="">Blog</a></li>
+                <li><a class="nav-li" href="">Pricing</a></li>
+                <li><a class="nav-li" href="">Contact</a></li>
               </ul>
             </nav>
             <div class="header__buttons">
