--- a/index.html
+++ b/index.html
@@ -65,9 +65,15 @@
               <button class="pro__btn">Go pro</button>
             </div>
             <div class="rating__content">
-              <svg class="trustpilot-svg" width="123" height="30">
-                <use href="./images/icon.svg#icon-trustpilot"></use>
-              </svg>
+              <a
+                href="https://www.trustpilot.com"
+                target="_blank"
+                rel="noreferrer"
+              >
+                <svg class="trustpilot-svg" width="123" height="30">
+                  <use href="./images/icon.svg#icon-trustpilot"></use>
+                </svg>
+              </a>
               <div class="rating__stars">
                 <svg width="16" height="15">
                   <use href="./images/icon.svg#star"></use>
@@ -111,12 +117,9 @@
               <p class="hero-meal-time">3:09 PM</p>
             </div>
             <div class="graph-modal">
-              <img
-                src="./images/Graph.svg"
-                alt="graphic"
-                width="98"
-                height="86"
-              />
+              <svg width="98" height="86" viewBox="0 0 98 86">
+                <image href="./images/Graph.svg" />
+              </svg>
             </div>
           </div>
         </div>
