add adjustments to burger menu

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       </section>
     </main>
     <footer></footer>
-    <div class="burger-overlay is-open">
+    <div class="burger-overlay is-open" id="burger-menu">
       <div class="burger-modal">
         <a class="burg-logo" href="index.html">
           <svg width="55" height="55">
