--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <button class="button__login">Login</button>
               <button class="button__register">Register</button>
             </div>
-            <button type="button" class="burger_menu" id="burger-button-open">
+            <button type="button" class="burger_menu">
               <svg width="30" height="20">
                 <use href="./images/icon.svg#burger-menu"></use>
               </svg>
@@ -199,7 +199,7 @@
       </section>
     </main>
     <footer></footer>
-    <div class="burger-overlay" id="burger-menu">
+    <div class="burger-overlay">
       <div class="burger-content">
         <div class="burger-modal">
           <a class="burg-logo" href="index.html">
@@ -207,7 +207,7 @@
               <use href="./images/icon.svg#icon-Logo"></use>
             </svg>
           </a>
-          <button type="button" class="burg-close" id="burger-button-close">
+          <button type="button" class="burg-close">
             <svg width="20" height="20">
               <use href="./images/icon.svg#icon-close"></use>
             </svg>
@@ -221,6 +221,10 @@
             <li><a class="nav-li-burg" href="">Pricing</a></li>
             <li><a class="nav-li-burg" href="">Contact</a></li>
           </ul>
+          <div class="buttons-auth">
+            <button class="button__login_burg">Login</button>
+            <button class="button__register_burg">Register</button>
+          </div>
           <h2 class="h-burg">eatly</h2>
           <div class="content">
             <svg width="10" height="10">
@@ -249,6 +253,12 @@
         </div>
       </div>
     </div>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
