--- a/index.html
+++ b/index.html
@@ -197,9 +197,30 @@
           </h2>
           <div class="res_content">
             <ul class="res_block_ul">
-              <li class="res_block"></li>
-              <li class="res_block"></li>
-              <li class="res_block"></li>
+              <li class="res_block">
+                <img
+                  width="395"
+                  height="196"
+                  src="./images/one-rest.png"
+                  alt=""
+                />
+              </li>
+              <li class="res_block">
+                <img
+                  width="395"
+                  height="196"
+                  src="./images/one-rest.png"
+                  alt=""
+                />
+              </li>
+              <li class="res_block">
+                <img
+                  width="395"
+                  height="196"
+                  src="./images/one-rest.png"
+                  alt=""
+                />
+              </li>
             </ul>
           </div>
         </div>
