--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@
                   src="./images/one-rest.png"
                   alt=""
                 />
+                <div class="card-content">
+                  <div class="res_category">
+                    <p>Healthy</p>
+                  </div>
+                </div>
               </li>
               <li class="res_block">
                 <img
