--- a/index.html
+++ b/index.html
@@ -208,6 +208,17 @@
                   <div class="res_category">
                     <p>Healthy</p>
                   </div>
+                  <h3>The Chicken King</h3>
+                  <div class="dwn-content">
+                    <p>24min</p>
+                    <svg width="25" height="25">
+                      <use href="./images/icon.svg#icon-Starfiol"></use>
+                    </svg>
+                    <p>4.8</p>
+                    <svg class="bookmark-icon" width="40" height="40">
+                      <use href="./images/icon.svg#icon-Bookmark"></use>
+                    </svg>
+                  </div>
                 </div>
               </li>
               <li class="res_block">
