--- a/index.html
+++ b/index.html
@@ -223,11 +223,28 @@
               </li>
               <li class="res_block">
                 <img
+                  class="res_img"
                   width="395"
                   height="196"
-                  src="./images/one-rest.png"
+                  src="./images/two-rest.png"
                   alt=""
                 />
+                <div class="card-content">
+                  <div class="res_second_category">
+                    <p>Trending</p>
+                  </div>
+                  <h3>The Burger King</h3>
+                  <div class="dwn-content">
+                    <p>24min</p>
+                    <svg width="25" height="25">
+                      <use href="./images/icon.svg#icon-Starfiol"></use>
+                    </svg>
+                    <p>4.9</p>
+                    <svg class="bookmark-icon" width="40" height="40">
+                      <use href="./images/icon.svg#icon-Bookmark"></use>
+                    </svg>
+                  </div>
+                </div>
               </li>
               <li class="res_block">
                 <img
