--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
                 />
                 <div class="card-content">
                   <div class="res_category">
-                    <p>Healthy</p>
+                    <p>Season</p>
                   </div>
-                  <h3>The Chicken King</h3>
+                  <h3>The Chicken Prince</h3>
                   <div class="dwn-content">
                     <p>24min</p>
                     <svg width="25" height="25">
@@ -235,7 +235,7 @@
                   </div>
                   <h3>The Burger King</h3>
                   <div class="dwn-content">
-                    <p>24min</p>
+                    <p>18min</p>
                     <svg width="25" height="25">
                       <use href="./images/icon.svg#icon-Starfiol"></use>
                     </svg>
@@ -248,11 +248,28 @@
               </li>
               <li class="res_block">
                 <img
-                  width="395"
+                  class="res_img"
+                  width="396"
                   height="196"
-                  src="./images/one-rest.png"
+                  src="./images/third-rest.png"
                   alt=""
                 />
+                <div class="card-content">
+                  <div class="res_third_category">
+                    <p>Healthly</p>
+                  </div>
+                  <h3>The Vegeterian Queen</h3>
+                  <div class="dwn-content">
+                    <p>20min</p>
+                    <svg width="25" height="25">
+                      <use href="./images/icon.svg#icon-Starfiol"></use>
+                    </svg>
+                    <p>4.5</p>
+                    <svg class="bookmark-icon" width="40" height="40">
+                      <use href="./images/icon.svg#icon-Bookmark"></use>
+                    </svg>
+                  </div>
+                </div>
               </li>
             </ul>
           </div>
