--- a/index.html
+++ b/index.html
@@ -215,9 +215,11 @@
                       <use href="./images/icon.svg#icon-Starfiol"></use>
                     </svg>
                     <p>4.8</p>
-                    <svg class="bookmark-icon" width="40" height="40">
-                      <use href="./images/icon.svg#icon-Bookmark"></use>
-                    </svg>
+                    <button type="button" class="bookmark-icon">
+                      <svg width="40" height="40">
+                        <use href="./images/icon.svg#icon-Bookmark"></use>
+                      </svg>
+                    </button>
                   </div>
                 </div>
               </li>
@@ -240,9 +242,11 @@
                       <use href="./images/icon.svg#icon-Starfiol"></use>
                     </svg>
                     <p>4.9</p>
-                    <svg class="bookmark-icon" width="40" height="40">
-                      <use href="./images/icon.svg#icon-Bookmark"></use>
-                    </svg>
+                    <button type="button" class="bookmark-icon">
+                      <svg width="40" height="40">
+                        <use href="./images/icon.svg#icon-Bookmark"></use>
+                      </svg>
+                    </button>
                   </div>
                 </div>
               </li>
@@ -265,9 +269,11 @@
                       <use href="./images/icon.svg#icon-Starfiol"></use>
                     </svg>
                     <p>4.5</p>
-                    <svg class="bookmark-icon" width="40" height="40">
-                      <use href="./images/icon.svg#icon-Bookmark"></use>
-                    </svg>
+                    <button type="button" class="bookmark-icon">
+                      <svg width="40" height="40">
+                        <use href="./images/icon.svg#icon-Bookmark"></use>
+                      </svg>
+                    </button>
                   </div>
                 </div>
               </li>
