--- a/index.html
+++ b/index.html
@@ -284,55 +284,53 @@
     </main>
     <footer></footer>
     <div class="burger-overlay">
-      <div class="burger-modal">
-        <a class="burg-logo" href="index.html">
-          <svg width="55" height="55">
-            <use href="./images/icon.svg#icon-Logo"></use>
-          </svg>
-        </a>
-        <button type="button" class="burg-close">
-          <svg width="20" height="20">
-            <use href="./images/icon.svg#icon-close"></use>
-          </svg>
-        </button>
-        <ul class="navbar-burg">
-          <li>
-            <a class="nav-li-burg current-burg" href="index.html">Home</a>
-          </li>
-          <li><a class="nav-li-burg" href="">Menu</a></li>
-          <li><a class="nav-li-burg" href="">Blog</a></li>
-          <li><a class="nav-li-burg" href="">Pricing</a></li>
-          <li><a class="nav-li-burg" href="">Contact</a></li>
-        </ul>
-        <div class="buttons-auth">
-          <button class="button__login_burg">Login</button>
-          <button class="button__register_burg">Register</button>
-        </div>
-        <h2 class="h-burg">eatly</h2>
-        <div class="content">
-          <svg width="10" height="10">
-            <use href="./images/icon.svg#icon-star-empty"></use>
-          </svg>
-          <h3 class="h3-burg">food and restoraunts company</h3>
-          <svg width="10" height="10">
-            <use href="./images/icon.svg#icon-star-empty"></use>
-          </svg>
-        </div>
-        <div class="content-two">
-          <p class="p-burg">
-            enjoy our premium quality service <br />
-            <span class="content__span__burg">over world</span>
-          </p>
-        </div>
-        <div class="me">
-          <svg width="5" height="5">
-            <use href="./images/icon.svg#icon-heart"></use>
-          </svg>
-          <p class="content__me">developed by Subx1s0o with love</p>
-          <svg width="5" height="5">
-            <use href="./images/icon.svg#icon-heart"></use>
-          </svg>
-        </div>
+      <a class="burg-logo" href="index.html">
+        <svg width="55" height="55">
+          <use href="./images/icon.svg#icon-Logo"></use>
+        </svg>
+      </a>
+      <button type="button" class="burg-close">
+        <svg width="20" height="20">
+          <use href="./images/icon.svg#icon-close"></use>
+        </svg>
+      </button>
+      <ul class="navbar-burg">
+        <li>
+          <a class="nav-li-burg current-burg" href="index.html">Home</a>
+        </li>
+        <li><a class="nav-li-burg" href="">Menu</a></li>
+        <li><a class="nav-li-burg" href="">Blog</a></li>
+        <li><a class="nav-li-burg" href="">Pricing</a></li>
+        <li><a class="nav-li-burg" href="">Contact</a></li>
+      </ul>
+      <div class="buttons-auth">
+        <button class="button__login_burg">Login</button>
+        <button class="button__register_burg">Register</button>
+      </div>
+      <p class="h-burg">eatly</p>
+      <div class="content">
+        <svg width="10" height="10">
+          <use href="./images/icon.svg#icon-star-empty"></use>
+        </svg>
+        <p class="h3-burg">food and restoraunts company</p>
+        <svg width="10" height="10">
+          <use href="./images/icon.svg#icon-star-empty"></use>
+        </svg>
+      </div>
+      <div class="content-two">
+        <p class="p-burg">
+          enjoy our premium quality service <br />
+          <span class="content__span__burg">over world</span>
+        </p>
+      </div>
+      <div class="me">
+        <svg width="5" height="5">
+          <use href="./images/icon.svg#icon-heart"></use>
+        </svg>
+        <p class="content__me">developed by Subx1s0o with love</p>
+        <svg width="5" height="5">
+          <use href="./images/icon.svg#icon-heart"></use>
+        </svg>
       </div>
     </div>
     <script
