--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <button class="button__register_burg">Register</button>
       </div>
       <p class="h-burg">eatly</p>
-      <div class="content">
+      <!-- <div class="content">
         <svg width="10" height="10">
           <use href="./images/icon.svg#icon-star-empty"></use>
         </svg>
@@ -322,7 +322,7 @@
           enjoy our premium quality service <br />
           <span class="content__span__burg">over world</span>
         </p>
-      </div>
+      </div> -->
       <div class="me">
         <svg width="5" height="5">
           <use href="./images/icon.svg#icon-heart"></use>
