--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section id="second-section">
         <div class="container third__container">
           <div class="border-third">
             <div class="third-main-img">
@@ -308,21 +308,6 @@
         <button class="button__register_burg">Register</button>
       </div>
       <p class="h-burg">eatly</p>
-      <!-- <div class="content">
-        <svg width="10" height="10">
-          <use href="./images/icon.svg#icon-star-empty"></use>
-        </svg>
-        <p class="h3-burg">food and restoraunts company</p>
-        <svg width="10" height="10">
-          <use href="./images/icon.svg#icon-star-empty"></use>
-        </svg>
-      </div>
-      <div class="content-two">
-        <p class="p-burg">
-          enjoy our premium quality service <br />
-          <span class="content__span__burg">over world</span>
-        </p>
-      </div> -->
       <div class="me">
         <svg width="5" height="5">
           <use href="./images/icon.svg#icon-heart"></use>
@@ -333,6 +318,16 @@
         </svg>
       </div>
     </div>
+    <div class="">
+      <div class="container">
+        <button class="btn-up">
+          <svg class="upsvg" width="30" height="30">
+            <use href="./images/icon.svg#arrow-right"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
