add test animations

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </div>
         </div>
       </section>
-      <section class="features">
+      <section id="section2" class="features">
         <div class="container features_container">
           <div class="features-list">
             <ul class="features-ul">
@@ -334,6 +334,8 @@
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
