--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
               <p class="hero-meal-time">3:09 PM</p>
             </div>
             <div class="graph-modal">
-              <svg width="98" height="86" viewBox="0 0 98 86">
-                <image href="./images/Graph.svg" />
+              <svg class="svg_svg" width="98" height="86">
+                <image width="98" height="86" href="./images/Graph.svg" />
               </svg>
             </div>
           </div>
@@ -282,7 +282,29 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+
+    <footer>
+      <div class="container footer">
+        <div class="border">
+          <div class="logotype">
+            <a href="index.html">
+              <svg width="111" height="42">
+                <use href="./images/icon.svg#Logo"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <div class="elements-footer">
+          <ul>
+            <li><a class="nav-li-footer" href="">Blog</a></li>
+            <li><a class="nav-li-footer" href="">Pricing</a></li>
+            <li><a class="nav-li-footer" href="">About us</a></li>
+            <li><a class="nav-li-footer" href="">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+
     <div class="burger-overlay">
       <a class="burg-logo" href="index.html">
         <svg width="55" height="55">
@@ -318,7 +340,7 @@
         </svg>
       </div>
     </div>
-    <div class="">
+    <div>
       <div class="container">
         <button class="btn-up">
           <svg class="upsvg" width="30" height="30">
