--- a/index.html
+++ b/index.html
@@ -328,45 +328,44 @@
           </div>
         </div>
         <div class="mob-footer">
-          <div class="border-mob-footer">
-            <div class="mob-footer-elements">
-              <div class="logotype-footer">
-                <a href="index.html">
-                  <svg width="100" height="57">
-                    <use href="./images/icon.svg#Logo"></use>
-                  </svg>
-                </a>
-              </div>
-              <div class="footer-icons">
-                <a href=""
-                  ><svg width="18" height="18">
-                    <use href="./images/icon.svg#icon-instagram"></use></svg
-                ></a>
-                <a
-                  href="
+          <div class="logotype-footer">
+            <a href="index.html">
+              <svg width="150" height="57">
+                <use href="./images/icon.svg#Logo"></use>
+              </svg>
+            </a>
+            <div class="footer-icons">
+              <a href=""
+                ><svg width="21" height="21">
+                  <use href="./images/icon.svg#icon-instagram"></use></svg
+              ></a>
+              <a
+                href="
             "
-                  ><svg width="21" height="21">
-                    <use href="./images/icon.svg#icon-linkedin"></use></svg
-                ></a>
-                <a href=""
-                  ><svg width="21" height="21">
-                    <use href="./images/icon.svg#icon-facebook"></use></svg
-                ></a>
-                <a href=""
-                  ><svg width="21" height="21">
-                    <use href="./images/icon.svg#icon-twitter"></use></svg
-                ></a>
-              </div>
+                ><svg width="21" height="21">
+                  <use href="./images/icon.svg#icon-linkedin"></use></svg
+              ></a>
+              <a href=""
+                ><svg width="21" height="21">
+                  <use href="./images/icon.svg#icon-facebook"></use></svg
+              ></a>
+              <a href=""
+                ><svg width="21" height="21">
+                  <use href="./images/icon.svg#icon-twitter"></use></svg
+              ></a>
             </div>
           </div>
-        </div>
-        <div class="elements-footer">
-          <ul class="nav-ul-footer">
-            <li><a class="nav-li-footer" href="">Blog</a></li>
-            <li><a class="nav-li-footer" href="">Pricing</a></li>
-            <li><a class="nav-li-footer" href="">About us</a></li>
-            <li><a class="nav-li-footer" href="">Contact</a></li>
-          </ul>
+          <div class="border-footer">
+            <ul class="nav-ul-footer">
+              <li><a class="nav-li-footer" href="">Blog</a></li>
+              <li><a class="nav-li-footer" href="">Pricing</a></li>
+              <li><a class="nav-li-footer" href="">About us</a></li>
+              <li><a class="nav-li-footer" href="">Contact</a></li>
+            </ul>
+          </div>
+          <div class="copyright">
+            <p>&copy; 2023 EATLY All Rights Reserved.</p>
+          </div>
         </div>
       </div>
     </footer>
