--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <div class="third-btn">
                 <button class="third-button">
                   Download
-                  <svg width="20" height="20">
+                  <svg class="stroke-svg" width="20" height="20">
                     <use href="./images/icon.svg#arrow-right"></use>
                   </svg>
                 </button>
@@ -208,7 +208,7 @@
                   <div class="res_category">
                     <p>Season</p>
                   </div>
-                  <h3>The Chicken Prince</h3>
+                  <h3>Chicken Prince</h3>
                   <div class="dwn-content">
                     <p>24min</p>
                     <svg width="25" height="25">
@@ -235,7 +235,7 @@
                   <div class="res_second_category">
                     <p>Trending</p>
                   </div>
-                  <h3>The Burger King</h3>
+                  <h3>Burger King</h3>
                   <div class="dwn-content">
                     <p>18min</p>
                     <svg width="25" height="25">
@@ -262,7 +262,7 @@
                   <div class="res_third_category">
                     <p>Healthly</p>
                   </div>
-                  <h3>The Vegeterian Queen</h3>
+                  <h3>Vegeterian Queen</h3>
                   <div class="dwn-content">
                     <p>20min</p>
                     <svg width="25" height="25">
@@ -278,6 +278,12 @@
                 </div>
               </li>
             </ul>
+          </div>
+          <div class="more">
+            <p>View all</p>
+            <svg class="right-svg" width="20" height="20">
+              <use href="./images/icon.svg#arrow-right"></use>
+            </svg>
           </div>
         </div>
       </section>
@@ -408,7 +414,7 @@
     <div>
       <div class="container">
         <button class="btn-up">
-          <svg class="upsvg" width="30" height="30">
+          <svg class="upsvg stroke-svg" width="30" height="30">
             <use href="./images/icon.svg#arrow-right"></use>
           </svg>
         </button>
