--- a/index.html
+++ b/index.html
@@ -199,11 +199,12 @@
             <ul class="res_block_ul">
               <li class="res_block">
                 <img
-                  width="395"
-                  height="196"
+                  class="res_img"
+                  srcset="./images/one-rest.png 1x ./images/one-rest@2x.png 2x"
                   src="./images/one-rest.png"
-                  alt=""
+                  alt="chicken"
                 />
+
                 <div class="card-content">
                   <div class="res_category">
                     <p>Season</p>
@@ -226,10 +227,9 @@
               <li class="res_block">
                 <img
                   class="res_img"
-                  width="395"
-                  height="196"
+                  srcset="./images/two-rest.png 1x ./images/two-rest@2x.png 2x"
                   src="./images/two-rest.png"
-                  alt=""
+                  alt="burger"
                 />
                 <div class="card-content">
                   <div class="res_second_category">
@@ -253,10 +253,9 @@
               <li class="res_block">
                 <img
                   class="res_img"
-                  width="396"
-                  height="196"
+                  srcset="./images/third-rest.png 1x ./images/third-rest@2x.png 2x"
                   src="./images/third-rest.png"
-                  alt=""
+                  alt="chicken"
                 />
                 <div class="card-content">
                   <div class="res_third_category">
