fix images problem

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <li class="res_block">
                 <img
                   class="res_img"
-                  srcset="./images/one-rest.png 1x ./images/one-rest@2x.png 2x"
+                  srcset="./images/one-rest.png 1x, ./images/one-rest@2x.png 2x"
                   src="./images/one-rest.png"
                   alt="chicken"
                 />
@@ -227,7 +227,7 @@
               <li class="res_block">
                 <img
                   class="res_img"
-                  srcset="./images/two-rest.png 1x ./images/two-rest@2x.png 2x"
+                  srcset="./images/two-rest.png 1x, ./images/two-rest@2x.png 2x"
                   src="./images/two-rest.png"
                   alt="burger"
                 />
@@ -253,7 +253,10 @@
               <li class="res_block">
                 <img
                   class="res_img"
-                  srcset="./images/third-rest.png 1x ./images/third-rest@2x.png 2x"
+                  srcset="
+                    ./images/third-rest.png    1x,
+                    ./images/third-rest@2x.png 2x
+                  "
                   src="./images/third-rest.png"
                   alt="chicken"
                 />
