--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             </ul>
           </div>
           <div class="more">
-            <p>View all</p>
+            <a href="">View all</a>
             <svg class="right-svg" width="20" height="20">
               <use href="./images/icon.svg#arrow-right"></use>
             </svg>
