--- a/index.html
+++ b/index.html
@@ -287,6 +287,191 @@
               <use href="./images/icon.svg#arrow-right"></use>
             </svg>
           </div>
+          <div class="border-rest"></div>
+        </div>
+      </section>
+      <section>
+        <div class="container menu_container">
+          <h2 class="restoraunts-h">
+            Our Top <span class="content__span">Dishes</span>
+          </h2>
+          <ul class="menu-ul">
+            <li>
+              <div class="menu-item">
+                <div class="menu-item-img">
+                  <img
+                    srcset="
+                      ./images/food-dish.png    1x,
+                      ./images/food-dish@2x.png 2x
+                    "
+                    src="./images/food-dish.png"
+                    alt="chicken"
+                  />
+                </div>
+                <div class="card-menu-container">
+                  <div class="res_third_category">
+                    <p>Healthly</p>
+                  </div>
+                  <h3>Chicken Hell</h3>
+                  <div class="dwn-content-menu">
+                    <p>20min</p>
+                    <svg width="25" height="25">
+                      <use href="./images/icon.svg#icon-Starfiol"></use>
+                    </svg>
+                    <p>4.5</p>
+                  </div>
+                  <div class="dwn-menu">
+                    <p>$12<span>.99</span></p>
+                    <button class="add-btn">
+                      <svg width="13" height="13">
+                        <use href="./images/icon.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="menu-item">
+                <div class="menu-item-img">
+                  <img
+                    srcset="
+                      ./images/food-dish2.png    1x,
+                      ./images/food-dish2@2x.png 2x
+                    "
+                    src="./images/food-dish2.png"
+                    alt="chicken"
+                  />
+                </div>
+                <div class="card-menu-container">
+                  <div class="res_second_category">
+                    <p>Trending</p>
+                  </div>
+                  <h3>Swe Dish</h3>
+                  <div class="dwn-content-menu">
+                    <p>30min</p>
+                    <svg width="25" height="25">
+                      <use href="./images/icon.svg#icon-Starfiol"></use>
+                    </svg>
+                    <p>4.5</p>
+                  </div>
+                  <div class="dwn-menu">
+                    <p>$10<span>.99</span></p>
+                    <button class="add-btn">
+                      <svg width="10" height="10">
+                        <use href="./images/icon.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="menu-item">
+                <div class="menu-item-img">
+                  <img
+                    srcset="
+                      ./images/food-dish3.png    1x,
+                      ./images/food-dish3@2x.png 2x
+                    "
+                    src="./images/food-dish3.png"
+                    alt="chicken"
+                  />
+                </div>
+                <div class="card-menu-container">
+                  <div class="dish_supreme_category">
+                    <p>Supreme</p>
+                  </div>
+                  <h3>Salmon Sea</h3>
+                  <div class="dwn-content-menu">
+                    <p>27min</p>
+                    <svg width="25" height="25">
+                      <use href="./images/icon.svg#icon-Starfiol"></use>
+                    </svg>
+                    <p>4.5</p>
+                  </div>
+                  <div class="dwn-menu">
+                    <p>$16<span>.99</span></p>
+                    <button class="add-btn">
+                      <svg width="13" height="13">
+                        <use href="./images/icon.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="menu-item">
+                <div class="menu-item-img">
+                  <img
+                    srcset="
+                      ./images/food-dish.png    1x,
+                      ./images/food-dish@2x.png 2x
+                    "
+                    src="./images/food-dish.png"
+                    alt="chicken"
+                  />
+                </div>
+                <div class="card-menu-container">
+                  <div class="res_third_category">
+                    <p>Healthly</p>
+                  </div>
+                  <h3>Chicken Hell</h3>
+                  <div class="dwn-content-menu">
+                    <p>20min</p>
+                    <svg width="25" height="25">
+                      <use href="./images/icon.svg#icon-Starfiol"></use>
+                    </svg>
+                    <p>4.5</p>
+                  </div>
+                  <div class="dwn-menu">
+                    <p>$14<span>.99</span></p>
+                    <button class="add-btn">
+                      <svg width="13" height="13">
+                        <use href="./images/icon.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="menu-item">
+                <div class="menu-item-img">
+                  <img
+                    srcset="
+                      ./images/food-dish2.png    1x,
+                      ./images/food-dish2@2x.png 2x
+                    "
+                    src="./images/food-dish2.png"
+                    alt="chicken"
+                  />
+                </div>
+                <div class="card-menu-container">
+                  <div class="res_second_category">
+                    <p>Trending</p>
+                  </div>
+                  <h3>Swe Dish</h3>
+                  <div class="dwn-content-menu">
+                    <p>30min</p>
+                    <svg width="25" height="25">
+                      <use href="./images/icon.svg#icon-Starfiol"></use>
+                    </svg>
+                    <p>4.5</p>
+                  </div>
+                  <div class="dwn-menu">
+                    <p>$10<span>.99</span></p>
+                    <button class="add-btn">
+                      <svg width="10" height="10">
+                        <use href="./images/icon.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
