add favorites button

--- a/index.html
+++ b/index.html
@@ -298,6 +298,11 @@
           <ul class="menu-ul">
             <li>
               <div class="menu-item">
+                <button class="favorites">
+                  <svg width="22" height="22">
+                    <use href="./images/icon.svg#icon-heart-none"></use>
+                  </svg>
+                </button>
                 <div class="menu-item-img">
                   <img
                     srcset="
@@ -333,6 +338,11 @@
             </li>
             <li>
               <div class="menu-item">
+                <button class="favorites">
+                  <svg width="22" height="22">
+                    <use href="./images/icon.svg#icon-heart-none"></use>
+                  </svg>
+                </button>
                 <div class="menu-item-img">
                   <img
                     srcset="
@@ -368,6 +378,11 @@
             </li>
             <li>
               <div class="menu-item">
+                <button class="favorites">
+                  <svg width="22" height="22">
+                    <use href="./images/icon.svg#icon-heart-none"></use>
+                  </svg>
+                </button>
                 <div class="menu-item-img">
                   <img
                     srcset="
@@ -403,6 +418,11 @@
             </li>
             <li>
               <div class="menu-item">
+                <button class="favorites">
+                  <svg width="22" height="22">
+                    <use href="./images/icon.svg#icon-heart-none"></use>
+                  </svg>
+                </button>
                 <div class="menu-item-img">
                   <img
                     srcset="
@@ -438,6 +458,11 @@
             </li>
             <li>
               <div class="menu-item">
+                <button class="favorites">
+                  <svg width="22" height="22">
+                    <use href="./images/icon.svg#icon-heart-none"></use>
+                  </svg>
+                </button>
                 <div class="menu-item-img">
                   <img
                     srcset="
