add second half

--- a/sign-up.html
+++ b/sign-up.html
@@ -98,7 +98,44 @@
             </div>
           </footer>
         </div>
-        <div class="second_side"></div>
+        <div class="second_side">
+          <div class="hero__image">
+            <div class="hero_image_before">
+              <img
+                srcset="./images/food.png 1x, ./images/food@2x.png 2x"
+                src="./images/food.png"
+                alt="food"
+              />
+            </div>
+            <div class="meal-modal">
+              <img
+                class="food_image"
+                width="57"
+                height="57"
+                src="./images/food-modal.png"
+                alt="food"
+              />
+              <div class="modal-text">
+                <h3 class="hero-h-meal">Chicken Hell</h3>
+                <p class="hero-p-meal">On The Way</p>
+              </div>
+              <p class="hero-meal-time">3:09 PM</p>
+            </div>
+            <div class="graph-modal">
+              <svg class="svg_svg" width="98" height="86">
+                <image width="98" height="86" href="./images/Graph.svg" />
+              </svg>
+            </div>
+          </div>
+          <div class="second-text">
+            <h2>Find Foods With Love</h2>
+            <p>
+              Eatly Is The Food Delivery Dashboard And Having More Than 2K+
+              Dishes Including Asian, Chinese, Italians And Many More. Our
+              Dashboard Helps You To Manage Orders And Money.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
     <script src="./js/auth.js"></script>
