finish second side

--- a/sign-up.html
+++ b/sign-up.html
@@ -29,12 +29,12 @@
             <h1>Sign Up To eatly</h1>
             <div class="auth-buttons">
               <button>
-                <svg width="25" height="25">
+                <svg class="auth-svg" width="25" height="25">
                   <use href="./images/icon.svg#icon-google"></use>
                 </svg>
               </button>
               <button>
-                <svg width="25" height="25">
+                <svg class="auth-svg" width="25" height="25">
                   <use href="./images/icon.svg#icon-appleinc"></use>
                 </svg>
               </button>
