add sign-in page

--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
               </ul>
             </nav>
             <div class="header__buttons">
-              <button class="button__login">Login</button>
-              <button class="button__register">Register</button>
+              <button onclick="LoginLocate()" class="button__login">
+                Login
+              </button>
+              <button onclick="RegisterLocate()" class="button__register">
+                Register
+              </button>
             </div>
             <button type="button" class="burger_menu">
               <svg width="30" height="20">
@@ -609,8 +613,12 @@
         <li><a class="nav-li-burg" href="">Contact</a></li>
       </ul>
       <div class="buttons-auth">
-        <button class="button__login_burg">Login</button>
-        <button class="button__register_burg">Register</button>
+        <button onclick="LoginLocate()" class="button__login_burg">
+          Login
+        </button>
+        <button onclick="RegisterLocate()" class="button__register_burg">
+          Register
+        </button>
       </div>
       <p class="h-burg">eatly</p>
       <div class="me">
