add reset password page

--- a/reset-password.html
+++ b/reset-password.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/sign-in.css" />
+    <link rel="stylesheet" href="./css/reset-pass.css" />
   </head>
   <body>
     <section>
@@ -34,20 +34,8 @@
           </header>
 
           <div class="elements">
-            <h1>Sign In To eatly</h1>
-            <div class="auth-buttons">
-              <button>
-                <svg class="auth-svg" width="25" height="25">
-                  <use href="./images/icon.svg#icon-google"></use>
-                </svg>
-              </button>
-              <button>
-                <svg class="auth-svg" width="25" height="25">
-                  <use href="./images/icon.svg#icon-appleinc"></use>
-                </svg>
-              </button>
-            </div>
-            <p class="or">OR</p>
+            <h1>Forget Password</h1>
+            <p class="or">Enter Your Mail To Reset</p>
             <form>
               <div class="input-container">
                 <label for="emailInput"></label>
@@ -59,36 +47,8 @@
                 </div>
               </div>
 
-              <div class="input-container">
-                <label for="passwordInput"></label>
-                <div class="icon-input">
-                  <input
-                    id="passwordInput"
-                    placeholder="PASSWORD"
-                    type="password"
-                  />
-                  <svg class="icone" width="15" height="15">
-                    <use href="./images/icon.svg#icon-pass"></use>
-                  </svg>
-                  <button type="button" class="seepass">
-                    <svg width="15" height="15">
-                      <use href="./images/icon.svg#icon-eye-blocked"></use>
-                    </svg>
-                  </button>
-                </div>
-              </div>
-
-              <div class="forget-pass">
-                <a href="reset-password.html">Forget Password ?</a>
-              </div>
-
-              <button class="submit-btn" type="submit">Sign Up</button>
+              <button class="submit-btn" type="submit">verify</button>
             </form>
-
-            <p class="dwn-text">
-              Create A New Account?
-              <a class="register" href="sign-up.html">Sign Up</a>
-            </p>
           </div>
           <footer>
             <div class="copyright">
@@ -158,8 +118,8 @@
         <li><a class="nav-li-burg" href="">Contact</a></li>
       </ul>
       <div class="buttons-auth">
-        <button onclick="RegisterLocate()" class="button__register_burg">
-          Register
+        <button onclick="LoginLocate()" class="button__login_burg">
+          Login
         </button>
       </div>
       <p class="h-burg">eatly</p>
@@ -173,6 +133,5 @@
         </svg>
       </div>
     </div>
-    <script src="./js/auth.js"></script>
   </body>
 </html>
