--- a/reset-password.html
+++ b/reset-password.html
@@ -121,6 +121,9 @@
         <button onclick="LoginLocate()" class="button__login_burg">
           Login
         </button>
+        <button onclick="RegisterLocate()" class="button__register_burg">
+          Register
+        </button>
       </div>
       <p class="h-burg">eatly</p>
       <div class="me">
@@ -133,5 +136,6 @@
         </svg>
       </div>
     </div>
+    <script src="./js/reset.js"></script>
   </body>
 </html>
